[package]
name = "zebra-seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "tracing"] }
hickory-dns = "0.25.2"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = "1.1"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
tower = { version = "0.4", features = ["util"] }
# Zebra dependencies - assuming latest published versions or git if needed.
# For scaffolding, we use version wildcards or recent versions to ensure compilation starts.
zebra-network = "1.1.0"
zebra-chain = "2.0.0"
dotenvy = "0.15.7"
rand = "0.9.2"
async-trait = "0.1.89"
hickory-server = "0.25.2"
hickory-proto = "0.25.2"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }
